src/main/metadata-excluded/objects/Change_Request__c.object
<CustomObject>
    <description>PMO: change request management.</description>
    <fields>
        <fullName>Assign_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Request_Mgmt1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assumption_Details__c</fullName>
        <label>Assumption Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BU_Notification_Date__c</fullName>
        <label>BU Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Requirement_Respond__c</fullName>
        <label>Business Requirement Respond</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CR_Collaboration_Meeting__c</fullName>
        <label>CR Collaboration Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CR_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CR Reference</label>
        <referenceTo>Defect__c</referenceTo>
        <relationshipLabel>CR Management</relationshipLabel>
        <relationshipName>CR_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Change_Description__c</fullName>
        <label>Change Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliverable__c</fullName>
        <label>Deliverable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_Respond__c</fullName>
        <label>Deployment Respond</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EP_App_Dev_Respond__c</fullName>
        <label>EP App/Dev Respond</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Costs_USD__c</fullName>
        <description>displays the effort in US dollars</description>
        <inlineHelpText>displays the effort in US dollars</inlineHelpText>
        <label>Estimated Costs (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Costs__c</fullName>
        <label>Estimated Costs (RMB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Effort_MD__c</fullName>
        <label>Estimated Effort (MD)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Benefits__c</fullName>
        <label>Expected Benefits</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Respond__c</fullName>
        <label>External Respond</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Final_Decision__c</fullName>
        <label>Final Decision</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Im__c</fullName>
        <label>Implementation Time</label>
        <picklist>
            <picklistValues>
                <fullName>Phase 1, 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1 before go live - 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 1 after go live - 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase 3, 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July 2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4th Quarter 2014</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Country__c</fullName>
        <label>Market / Country</label>
        <picklist>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Migration_Respond__c</fullName>
        <label>Migration Respond</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Respond__c</fullName>
        <label>Other Respond</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1-Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Nice To Have</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester_Name_Old__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester Name Old</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Request_Mgmt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <label>Requester Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Respond_Person_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respond Person - Deployment</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CR_Management5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respond_Person_External__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respond Person - External</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CR_Management6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respond_Person_Migration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respond Person - Migration</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CR_Management3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respond_Person_Other__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respond Person - Other</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CR_Management7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respond_Person_SFDC_App_Dev_Respond__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respond Person - SFDC App/Dev Respond</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CR_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respond_Person_Testing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respond Person - Testing</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CR_Management4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respond_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Respond Person - EP App/Dev</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CR_Management2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_App_Dev_Respond__c</fullName>
        <label>SFDC App/Dev Respond</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>0 - No Document</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Documented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Solution Agreed &amp; Estimated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Designed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Developed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Tested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 - Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 - Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_Respond__c</fullName>
        <label>Testing Respond</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reponds Person - BR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CR_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CR Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Priority__c</columns>
        <columns>Assign_to__c</columns>
        <columns>Assumption_Details__c</columns>
        <columns>Change_Description__c</columns>
        <columns>Estimated_Effort_MD__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Final_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Im__c</columns>
        <columns>BU_Notification_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Requester_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Open_CRs_Phase_1</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Priority__c</columns>
        <columns>Assign_to__c</columns>
        <columns>Change_Description__c</columns>
        <columns>Estimated_Effort_MD__c</columns>
        <columns>Status__c</columns>
        <columns>Final_Decision__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Requester_Name_Old__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Deliverable__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>7 - Closed</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>8 - Cancelled</value>
        </filters>
        <filters>
            <field>Im__c</field>
            <operation>equals</operation>
            <value>&quot;Phase 1, 2013&quot;</value>
        </filters>
        <label>All Open CRs Phase 1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Open_CRs_Phase_3</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Change_Description__c</columns>
        <columns>Estimated_Effort_MD__c</columns>
        <columns>Final_Decision__c</columns>
        <columns>Request_Date__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Assign_to__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>7 - Closed,8 - Cancelled</value>
        </filters>
        <filters>
            <field>Im__c</field>
            <operation>equals</operation>
            <value>&quot;Phase 3, 2014&quot;</value>
        </filters>
        <label>All Open CRs Phase 3</label>
    </listViews>
    <listViews>
        <fullName>CR_list</fullName>
        <columns>NAME</columns>
        <columns>Change_Description__c</columns>
        <columns>Estimated_Effort_MD__c</columns>
        <columns>Estimated_Costs__c</columns>
        <columns>Final_Decision__c</columns>
        <columns>Status__c</columns>
        <columns>Im__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>7 - Closed</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>8 - Cancelled</value>
        </filters>
        <label>CR-list</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{000000}</displayFormat>
        <label>Change Request  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CR Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>